# rules_kubebuilder

./: .gitignore  WORKSPACE
controller-gen/: controller-gen-external.bzl  controller-gen-repository.bzl  controller-gen-toolchain.bzl  controller-gen.bzl  deps.bzl
it/: BUILD.bazel  WORKSPACE  go.mod  go.sum
it/api/v1alpha1/: BUILD.bazel  api.go  groupversion_info.go
test/: controller-gen-test.bzl
