load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_kubebuilder//controller-gen:controller-gen.bzl", "controller_gen_crd", "controller_gen_object", "controller_gen_rbac", "controller_gen_webhook")

controller_gen_crd(
    name = "generate_crds",
    srcs = ["//api/v1alpha1:src"],
    out_dir = "config/crd",
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ],
)

controller_gen_rbac(
    name = "generate_rbac",
    srcs = ["//api/v1alpha1:src"],
    out_dir = "config/rbac",
    roleName = "manager-role",
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ],
)

controller_gen_webhook(
    name = "generate_webhook",
    srcs = ["//api/v1alpha1:src"],
    out_dir = "config/webhook",
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-build_file_generation=on",
        "-build_file_proto_mode=disable",
        "-prune=true",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle",
)

alias(
    name = "go",
    actual = "@go_sdk//:bin/go",
    visibility = ["//visibility:public"],
)
