load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_kubebuilder//controller-gen:controller-gen.bzl", "controller_gen_object")

filegroup(
    name = "src",
    srcs = [
        "api.go",
        "groupversion_info.go",
    ],
    visibility = ["//visibility:public"],
)

controller_gen_object(
    name = "generate_objects",
    srcs = [":src"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)

go_library(
    name = "v1alpha1",
    srcs = [
        "api.go",
        "groupversion_info.go",
        ":generate_objects",  #keep
    ],
    importpath = "babisk.github.com/rules_kubebuilder/api/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",  #keep
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
